Fixed header alignments

--- a/src/shared/styles/pages/equipment/EquipmentUpdate.css
+++ b/src/shared/styles/pages/equipment/EquipmentUpdate.css
@@ -6,9 +6,8 @@
 }
 
 #equipment-update Header {
-  padding-left: 5%;
+  padding: 0% 10%;
   width: 100%;
-  height: 80px;
 }
 
 #equipment-update .equipment-update-content {
