--- a/src/shared/styles/pages/ticket/TicketRegister.css
+++ b/src/shared/styles/pages/ticket/TicketRegister.css
@@ -6,16 +6,15 @@
 }
 
 #ticket-register Header {
-  padding-left: 5%;
+  padding: 0% 10%;
   width: 100%;
-  height: 80px;
+}
+
+#ticket-register .ticket-register-content {
+  padding: 5% 10%;
 }
 
 /* ESTILIZAÇÃO DO TITULO E SUBTITULO DA PÁGINA */
-#ticket-register .ticket-register-content .ticket-register-title {
-  padding: 5% 10% 0 5%;
-}
-
 #ticket-register .ticket-register-title h1 {
   display: flex;
   align-items: center;
@@ -33,7 +32,7 @@
 /* ESTILIZAÇÃO DO FORMULÁRIO */
 
 #ticket-register .ticket-register-form {
-  padding: 2% 5%;
+  padding: 3% 0%;
   height: 50%;
   width: 100%;
   border-bottom: 100px;
