--- a/src/shared/styles/pages/user/Signup.css
+++ b/src/shared/styles/pages/user/Signup.css
@@ -6,9 +6,8 @@
 }
 
 #signup Header {
-  padding-left: 5%;
+  padding: 0% 10%;
   width: 100%;
-  height: 80px;
 }
 
 #signup .signup-content {
