--- a/src/shared/styles/pages/user/UserUpdate.css
+++ b/src/shared/styles/pages/user/UserUpdate.css
@@ -6,9 +6,8 @@
 }
 
 #user-update Header {
-  padding-left: 5%;
+  padding: 0% 10%;
   width: 100%;
-  height: 80px;
 }
 
 #user-update .user-update-content {
